Part-3/main.tf
# Define the AWS provider configuration.
provider "aws" {
  region = "ap-south-1"
}

# variable "cidr" {
#     #default = "10.0.0.0/16"
#     #using tfvars 
#     #variables.tf is not needed until u declared here...delete variable.tf if it is declared here
    
# }

resource "aws_key_pair" "example" {
  key_name   = "terraform-demo-sreeja"  # Replace with your desired key name
  public_key = file("C:/Users/SreejaPakkiru/.ssh/id_ed25519.pub")  # Replace with the path to your public key file
}

resource "aws_vpc" "myvpc" {
  cidr_block = var.cidr
}

resource "aws_subnet" "sub1" {
  vpc_id                  = aws_vpc.myvpc.id
  cidr_block              = "10.0.0.0/24"
  #availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.myvpc.id
}

resource "aws_route_table" "RT" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "rta1" {
  subnet_id      = aws_subnet.sub1.id
  route_table_id = aws_route_table.RT.id
}

resource "aws_security_group" "webSg" {
  name   = "web"
  vpc_id = aws_vpc.myvpc.id

  ingress { #inbound configuration
    description = "HTTP from VPC"
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress { 
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Web-sg"
  }
}

resource "aws_instance" "server" {
  ami                    = "ami-02b8269d5e85954ef"
  instance_type          = "t3.micro"
  key_name      = aws_key_pair.example.key_name
  vpc_security_group_ids = [aws_security_group.webSg.id]
  subnet_id              = aws_subnet.sub1.id

  connection {
    type        = "ssh"
    user        = "ubuntu"  # Replace with the appropriate username for your EC2 instance
    private_key = file("C:/Users/SreejaPakkiru/.ssh/id_ed25519")  # Replace with the path to your private key
    host        = self.public_ip #already in this resource block
    #if it is outside the resource block to connect to instance, we use resource.resource_name.public_ip
  }

  # File provisioner to copy a file from local to the remote EC2 instance
  provisioner "file" {
    source      = "app.py"  # Replace with the path to your local file
    destination = "/home/ubuntu/app.py"  # Replace with the path on the remote instance
  }

   #executing scripts 
#   provisioner "remote-exec" {
#     inline = [
#       "echo 'Hello from the remote instance'",
#       "sudo apt update -y",  # Update package lists (for ubuntu)
#       "sudo apt-get install -y python3-pip",  # Example package installation
#       "cd /home/ubuntu",
#       "sudo pip3 install flask",
#       "sudo python3 app.py &", #Starts Flask in background, but when Terraform finishes the SSH session, the process may stop

#     ]
#   }
provisioner "remote-exec" {
  inline = [
    "echo 'Hello from the remote instance'",
    "sudo apt update -y",
    "sudo apt install -y python3-pip",
    "cd /home/ubuntu",
    "sudo pip3 install flask",
    "nohup sudo python3 /home/ubuntu/app.py > /home/ubuntu/app.log 2>&1 &",
    # "sudo python3 app.py"

    # nohup → keep running after SSH disconnect
    # > app.log 2>&1 → log output
    # & → run in background
  ]
}
}
